# wallwarp

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  build.rs
.github/workflows/: release.yml
locales/: en.ftl  zh-cn.ftl
src/: i18n.rs  lib.rs  main.rs
src/services/: download.rs  local.rs  mod.rs  online_wallhaven.rs  proxy.rs  request_context.rs
src/services/async_task/: cache_cleanup.rs  download_to_cache.rs  download_wallpaper.rs  get_supported_images.rs  load_online_wallpaper.rs  load_single_wallpaper.rs  load_wallpaper_paths.rs  mod.rs  open_folder.rs  set_wallpaper.rs  streaming.rs
src/services/database/: connection.rs  download_tasks.rs  mod.rs
src/services/wallhaven/: client.rs  helper.rs  mod.rs  models.rs  service.rs  types.rs
src/services/wallhaven/model/: aspect_ratio.rs  category.rs  color.rs  mod.rs  purity.rs  ratio.rs  resolution.rs  sorting.rs  time_range.rs
src/ui/: app.rs  async_tasks.rs  auto_change.rs  auto_change_handlers.rs  close_confirmation.rs  common.rs  download.rs  download_handlers.rs  local.rs  local_handlers.rs  main.rs  message.rs  mod.rs  online.rs  online_filter.rs  online_handlers.rs  online_list.rs  online_modal.rs  settings.rs  settings_handlers.rs  style.rs  subscription.rs  tray.rs  types.rs  update.rs  view.rs
src/ui/auto_change/: handlers.rs  message.rs  mod.rs  state.rs
src/ui/auto_change/handler/: message.rs  mod.rs  start.rs  stop.rs  task.rs  tick.rs
src/ui/auto_change/state/: load_from_config.rs  mod.rs  state.rs
src/ui/common/: bordered_container.rs  colored_button.rs  confirmation_dialog.rs  custom_title.rs  icon_button.rs  mod.rs  settings.rs  tooltip_button.rs  tooltip_radio.rs
src/ui/download/: database.rs  handlers.rs  message.rs  mod.rs  state.rs  view.rs
src/ui/download/handler/: add_task.rs  batch_operations.rs  cancel_task.rs  completed.rs  copy_link.rs  delete_task.rs  locate_file.rs  mod.rs  pause_task.rs  progress.rs  resume_task.rs  retry_task.rs  selection.rs  set_wallpaper.rs  sort.rs  start_download.rs  update_speed.rs  view_file.rs
src/ui/download/state/: action.rs  mod.rs  state.rs
src/ui/download/widget/: batch_button.rs  batch_operation.rs  checkbox.rs  clear_completed.rs  download_display.rs  empty.rs  filter_options.rs  mod.rs  operation_buttons.rs  separator.rs  status_display.rs  status_filter.rs  table.rs  table_header.rs  table_row.rs  toolbar.rs
src/ui/local/: handlers.rs  message.rs  mod.rs  state.rs  view.rs
src/ui/local/handler/: confirm_delete.rs  delete_confirm.rs  load_next_page.rs  load_page.rs  load_wallpapers.rs  mod.rs  modal_image.rs  next_image.rs  next_local_image.rs  previous_image.rs  previous_local_image.rs  scroll_to_bottom.rs  set_wallpaper.rs  view_file.rs
src/ui/local/widget/: content.rs  error_placeholder.rs  loaded_wallpaper.rs  loading_placeholder.rs  mod.rs  modal.rs  modal_loading_placeholder.rs  model.rs
src/ui/main/: close_confirm.rs  main.rs  message.rs  mod.rs  state.rs  tray.rs  view.rs
src/ui/main/handler/: close_confirm.rs  custom_title_bar.rs  detect_color_mode.rs  instance_trigger.rs  minimize_to_tray.rs  mod.rs  notice.rs  page_select.rs  pending_save.rs  resize_window.rs  save_current_wallpaper.rs  scroll_to_top.rs  show_window.rs  theme_select.rs  tray_menu_event.rs  tray_switch_wallpaper.rs  wallpaper_history.rs  window_close_request.rs  window_focuse.rs  window_resize.rs
src/ui/main/widget/: container_style.rs  menu_button.rs  mod.rs  (+3 more)
src/ui/online/: message.rs  mod.rs  state.rs  types.rs  view.rs
src/ui/settings/: message.rs  mod.rs  types.rs  view.rs
src/ui/style/: colors.rs  dimensions.rs  mod.rs  shadows.rs  theme.rs
src/ui/widget/: diagonal_line.rs  mod.rs
src/utils/: animated_image.rs  assets.rs  config.rs  helpers.rs  images.rs  logger.rs  mod.rs  single_instance.rs  startup.rs  window_utils.rs
(+76 files in other folders)
