[package]
name = "wallwarp"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image", "advanced"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", features = ["webp"] }
gif = "0.14.1"
toml = "0.9.10"
open = "5.3"
rfd = "0.17.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fast_image_resize = { version = "5.6.0", features = ["image"] }
rayon = "1.11.0"

# i18n
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
tray-icon = "0.21.3"

[build-dependencies]
winresource = "0.1.28"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
# 指定需要包含的资源文件
resources = ["locales"]

[[package.metadata.packager.binaries]]
path = "wallwarp.exe"
main = true
