[package]
name = "wallwarp"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image", "advanced"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16.1"
serde_json = "1.0"
image = { version = "0.25", features = ["webp"] }
gif = "0.14.1"
toml = "0.9.11"
open = "5.3"
rfd = "0.17.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }
rayon = "1.11.0"
reqwest = { version = "0.13.1", default-features = false, features = [
    "native-tls",
    "http2",
    "json",
    "stream",
    "brotli",
    "gzip",
] }
urlencoding = "2.1"
async-stream = "0.3"

# i18n
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"
wallpaper = "3.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
tray-icon = "0.21.3"

[build-dependencies]
winresource = "0.1.29"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
# 指定需要包含的资源文件
resources = ["locales"]

[[package.metadata.packager.binaries]]
path = "wallwarp.exe"
main = true
