[package]
name = "wallwarp"
version = "1.0.0"
authors = ["zsyo <zephyr@aico.top>"]
repository = "https://github.com/zsyo/wallwarp"
edition = "2024"
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
iced = { version = "0.14", features = [
    "image",    # 需要显示图片
    "tokio",    # 异步任务（sleep等）运行时支持
    "canvas",   # 自定义绘图
    "advanced", # 启用高级功能
] }
iced_aw = { version = "0.13", features = ["drop_down", "number_input"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
serde_json = "1.0"
image = { version = "0.25", features = ["webp"] }
toml = "0.9"
open = "5.3"
rfd = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fast_image_resize = { version = "6.0", features = ["image"] }
rayon = "1.11"
reqwest = { version = "0.13", default-features = false, features = [
    "native-tls",
    "http2",
    "json",
    "stream",
    "brotli",
    "gzip",
] }
urlencoding = "2.1"
async-stream = "0.3"
wallpaper = "3.2"
rand = "0.9"
chrono = "0.4"
scopeguard = "1.2"
windows = { version = "0.62", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# i18n
fluent-bundle = "0.16"
unic-langid = "0.9"
sys-locale = "0.3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
tray-icon = "0.21"

[build-dependencies]
winresource = "0.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
# 指定需要包含的资源文件
resources = ["locales"]

[[package.metadata.packager.binaries]]
path = "wallwarp.exe"
main = true
